# obs-persian-cc

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/workflows/: build-project.yaml  push.yaml
cmake/: Findlibobs.cmake
src/: plugin-main.cpp  plugin-support.h  subtitle-source.cpp  subtitle-source.hpp
